# visloc_retrieval

./: .gitignore  .gitmodules  .~lock.timm_sfm.csv#  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  _version.py  conda_requirements.txt  log.txt  pyproject.toml  requirements.txt  search_timm_models_resnet.csv  setup.py  timm_sfm.csv
.github/workflows/: linter.yml  main.yml
core/backbones/: densenet.py  misc.py  residual.py  url.py  util.py  vgg.py  wider_resnet.py
core/enhance/: adjust.py  core.py  histogram.py
core/features/: affine_shape.py  hardnet.py  laf.py  matching.py  nms.py  orientation.py  responses.py  scale_space_detector.py  siftdesc.py  sosnet.py  superpoint.py
core/filters/: blur.py  filter.py  gaussian.py  kernels.py  laplacian.py  median.py  motion.py  sobel.py
core/geometry/: conversions.py  depth.py  homography.py  linalg.py
core/utils/: PCA.py  configurations.py  download_win.py  general.py  grid.py  group.py  helper.py  image.py  logging.py  meters.py  scheduler.py
image_retrieval/: feature_extractor.py
image_retrieval/algos/: algo.py  arcface.py  attention_algo.py
image_retrieval/configuration/: config.py
image_retrieval/datasets/: __init__.py  misc.py
image_retrieval/examples/: test.py  test_all.py  (+1 more)
notebook/: test_all.ipynb  timm_models.ipynb
results/: gl18_resnet50_gem_2048.txt  resnet101_c4_gem_1024.txt  resnet101_gem_2048.txt  resnet18_how.txt  resnet50_c4_gem_1024.txt  resnet50_c4_how.txt  resnet50_gem_2048.txt  sfm_resnet101_c4_gem_1024.txt  sfm_resnet18_how_128.txt  sfm_resnet50_c4_gem_1024.txt  sfm_resnet50_c4_how_128.txt  sfm_resnet50_gem_2048.txt  sfm_tf_efficientnet_l2_ns_475_gem.txt  testing.txt
retrieval/: __init__.py  feature_extractor.py
scripts/: download_all.py  download_all.sh  extract.py  extract.sh  extract_1M.sh  prepare_gl18.py  prepare_gl20.py  search_timm_models.sh  test.py  test.sh  test_asmk.py  test_asmk.sh  test_global_descriptor.py  test_global_descriptor.sh  test_msls.py  test_msls.sh  train.py  train.sh  train_test.sh
(+245 files in other folders)
