[project]

name = "retrieval"
description = "Visloc Retrieval"
keywords = ["computer vision", "deep learning", "pytorch"]
license = { file = "LICENSE" }
authors = [{ name = "BOUAMER Tarek", email = "tarekbouamer1788@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries",
]

dynamic = ["dependencies", "optional-dependencies", "readme", "version"]

[project.urls]
"Bug Tracker" = "https://github.com/Tarekbouamer/visloc_retrieval/issues"
# Documentation = 
Download = "https://github.com/Tarekbouamer/visloc_retrieval"
# Homepage =
"Source Code" = "https://github.com/Tarekbouamer/visloc_retrieval"


[tool.setuptools]
zip-safe = true
license-files = ["LICENSE"]
include-package-data = false

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=68.0.0", "wheel"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "retrieval.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.dynamic.optional-dependencies]
# dev = { file = "requirements-dev.txt" }
# docs = { file = ["requirements-docs.txt"] }
# x = { file = ["requirements-x.txt"] }

[tool.setuptools.packages.find]
exclude = ["docs*", "test*", "examples*"]
namespaces = false
